# corrkit

./: .corky.toml.example  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md  SPEC.md  SPECS.md  VERSIONS.md  accounts.toml.example  collaborators.toml  install.sh  plan.md  pyproject.toml  voice.md
.claude/skills/email/: README.md  SKILL.md  find_unanswered.py
.github/workflows/: pypi.yml  release.yml
.make/: common.mk
docs/development/: conventions.md
docs/guide/: commands.md
docs/reference/: changelog.md  specs.md
services/: com.corky.watch.plist  corky-watch.service
src/: accounts.py  accounts.rs  app_config.py  app_config.rs  audit_docs.py  audit_docs.rs  cli.rs  corrkit.py  help.py  help.rs  init.py  init.rs  lib.rs  main.rs  migrate.rs  resolve.py  resolve.rs  skill.rs  spaces.py  upgrade.rs  util.rs  watch.py  watch.rs
src/cal/: auth.rs  delete.rs  list.rs  mod.rs
src/collab/: __init__.py  add.py  find_unanswered.py  remove.py  rename.py  reset.py  sync.py  validate_draft.py
src/collab/templates/: find_unanswered.py  notify.yml  validate_draft.py
src/config/: contact.rs  corky_config.rs  mod.rs
src/contact/: __init__.py  add.py  add.rs  from_conversation.rs  info.rs  mod.rs  sync.rs
src/draft/: migrate.rs  mod.rs  push.py
src/filter/: build.rs  check.rs  gmail_auth.rs  mod.rs  pull.rs  push.rs
src/label/: clear.rs
src/mailbox/: add.rs  find_unanswered.rs  list.rs  mod.rs  remove.rs  rename.rs  reset.rs  sync.rs  templates.rs  validate_draft.rs
src/social/: auth.rs  draft.rs  linkedin.rs  mod.rs  profiles.rs  publish.rs
src/sync/: auth.py  auth.rs  folders.py  folders.rs  gmail.py  imap.py  imap_sync.rs  manifest.rs  markdown.rs  mod.rs  routes.rs  slack_import.rs  sms_import.rs  telegram_import.rs  types.rs
src/transcribe/: audio.rs  diarize.rs  engine.rs  mod.rs  model.rs
tasks/integrations/: slack.md  telegram.md
tests/: conftest.py  test_accounts.rs  test_add_label.py  test_app_config.py  test_app_config.rs  test_cli.rs  test_collab_add.py  test_collab_config.py  test_collab_remove.py  test_collab_rename.py  test_collab_sync.py  test_collab_workflow.py  test_contact.rs  test_contact_add.py  test_corrkit.py  test_draft.rs  test_draft_push.py  test_gmail_sync.py  test_imap_sync.py  test_init.py  test_init.rs  test_list_folders.py  test_mailbox.rs  test_migrate.rs  test_resolve.py  test_resolve.rs  test_slack_import.rs  test_social_draft.rs  test_social_publish.rs  test_sync.rs  test_sync_state_migration.py  test_telegram_import.rs
tests/common/: mod.rs
wrapper/: pyproject.toml
wrapper/src/corky/: __init__.py  __main__.py
wrapper/src/corrkit/: __init__.py  __main__.py
