[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync", "src/draft", "src/cloudflare", "src/collab"]

[tool.hatch.build.targets.wheel.force-include]
"src/audit_docs.py" = "audit_docs.py"
"src/help.py" = "help.py"
"src/corrkit.py" = "corrkit.py"
"src/accounts.py" = "accounts.py"

[project]
name = "correspondence-kit"
version = "0.2.0"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "google-auth-oauthlib>=1.0.0",
    "httpx>=0.28.0",
    "imapclient>=3.1.0",
    "msgspec>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "poethepoet==0.39.0",
    "pytest>=8.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
]

[dependency-groups]
dev = ["correspondence-kit[dev]"]

[project.scripts]
corrkit = "corrkit:main"
sync-auth = "sync.auth:main"
sync = "sync.imap:main"
sync-gmail = "sync.imap:main"
list-folders = "sync.folders:main"
push-draft = "draft.push:main"
audit-docs = "audit_docs:main"
collab-add = "collab.add:main"
collab-sync = "collab.sync:main"
collab-status = "collab.sync:status"
collab-remove = "collab.remove:main"
help = "help:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks]
audit = "uv run audit-docs"
precommit = ["ty", "ruff", "test"]
ruff = "ruff check --fix"
test = "pytest"
ty = "ty check --error-on-warning"
