[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync", "src/draft", "src/cloudflare", "src/collab", "src/contact"]

[tool.hatch.build.targets.wheel.force-include]
"src/audit_docs.py" = "audit_docs.py"
"src/help.py" = "help.py"
"src/corrkit.py" = "corrkit.py"
"src/accounts.py" = "accounts.py"
"src/resolve.py" = "resolve.py"
"src/init.py" = "init.py"
"src/watch.py" = "watch.py"

[project]
name = "corrkit"
version = "0.6.0"
description = "Sync email threads from IMAP to Markdown, draft replies, push routing intelligence to Cloudflare"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "google-auth-oauthlib>=1.0.0",
    "httpx>=0.28.0",
    "imapclient>=3.1.0",
    "msgspec>=0.20.0",

    "python-dotenv>=1.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "poethepoet==0.39.0",
    "pytest>=8.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
]

[project.urls]
Repository = "https://github.com/btakita/corrkit"

[dependency-groups]
dev = ["corrkit[dev]"]

[project.scripts]
corrkit = "corrkit:main"
init = "init:main"
sync-auth = "sync.auth:main"
sync = "sync.imap:main"
sync-gmail = "sync.imap:main"
list-folders = "sync.folders:main"
push-draft = "draft.push:main"
audit-docs = "audit_docs:main"
find-unanswered = "collab.find_unanswered:main"
validate-draft = "collab.validate_draft:main"
add-label = "accounts:add_label_main"
contact-add = "contact.add:main"
watch = "watch:main"
help = "help:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks]
audit = "uv run audit-docs"
precommit = ["ty", "ruff", "test"]
ruff = "ruff check --fix"
test = "pytest"
ty = "ty check --error-on-warning"
