[project]
name = "corrkit"
version = "0.7.0"
description = "Thin wrapper for the corrkit Rust binary"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.scripts]
corrkit = "corrkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corrkit"]
