[project]
name = "corky"
version = "0.7.0"
description = "Thin wrapper for the corky Rust binary"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.scripts]
corky = "corky:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corky"]
